# WeatherWatch

./: .gitignore  .pylintrc  .pyway.conf  README.md  init.sh  mariadb-docker-compose.yml  mysql-docker-compose.yml  poetry.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
config/: logging.yml  weatherwatch.yml
config/etc/: environment
data/: indoor_3dfloor.json  indoor_basement.json  outdoor.json
docs/: BOM.md  CONFIG.md  SETUP.md
sql/sample/: aqi_sensor.sql  indoor_sensor.sql  outdoor_sensor.sql
sql/schema/: V1_0_0__initial.sql  V1_1_0__aqi.sql  V1_1_0__light.sql  V1_2_0__rain-delta.sql  V1_2_0__solar.sql  V1_2_1__outdoor_sensor.sql  V1_2_2__indoor_sensor.sql  V1_2_3__aqi_sensor.sql  V1_2_4__light_sensor.sql  V1_2_5__pi_metrics.sql  V1_2_6__sdr_metrics.sql  V1_3_0__outdoor_sensor.sql  V1_3_1__indoor_sensor.sql  V1_3_2__aqi_sensor.sql  V1_3_3__light_sensor.sql  V1_3_4__pi_metrics.sql  V1_3_5__sdr_metrics.sql  V1_3_6__sonic_reading.sql  V2_0_0__wu-backups.sql
sql/sp/: aqi_clean.sql
src/: main.py
src/conf/: AppConfig.py  DatabaseConfig.py  SchedulerConfig.py  SensorConfig.py
src/entity/: BaseEntity.py  BaseSensor.py  IndoorSensor.py  OutdoorSensor.py  PIMetrics.py  PiMetrics.py  SDRMetricts.py
src/gps/: GPSReader.py
src/repository/: BaseRepository.py  DataStore.py  IndoorSensorRepository.py  OutdoorSensorRepository.py  PIMetricsRepository.py  SDRMetricsRepository.py
src/sensor/bmp/: BMPData.py  Bmp280SensorReader.py  Bmp388SensorReader.py  SensorData.py
src/sensor/bmp388/: SensorData.py  SensorReader.py
src/sensor/gps/: GPSReader.py
src/sensor/sdr/: BaseData.py  BaseSensor.py  IndoorData.py  OutdoorData.py  SDRReader.py  SensorReader.py
src/svc/: PIMetricsSvc.py  SchedulerSvc.py  SensorSvc.py
src/util/: Singleton.py
systemd/: weatherdash.service  weatherwatch.service
tests/: __init__.py  conftest.py
tests/backup/: test_BackupRangeTest.py
tests/camera/: test_Camera.py  test_CameraControl.py  test_CameraTest.py  test_TimelapseTest.py
tests/conf/: SensorConfigTest.py  test_AQIConfigTest.py  test_CameraConfigTest.py  test_DashConfigTest.py  test_DatabaseConfigTest.py  test_EmailConfigTest.py  test_MiscConfigTest.py  test_MqttConfigTest.py  test_SensorConfigTest.py
tests/dashboard/: BaseDashboardTest.py  test_AppTest.py
tests/dashboard/component/: test_GaugeTest.py  test_GraphTest.py  test_RainGaugeTest.py  test_WindCompassTest.py
tests/data/: indoor.json  outdoor.json
tests/entity/: test_AQISensorTest.py  test_LocalToUTCDateTimeTest.py
tests/gps/: test_GPSReaderMockTest.py  test_GPSReaderTest.py
tests/mqtt/: test_MqttListenerTest.py
tests/repository/: BaseRepositoryTest.py  test_AQISensorRepositoryTest.py  test_CoerceDatetimeTest.py  test_DataStoreTest.py  test_IndoorSensorRepositoryTest.py  test_LightSensorRepositoryTest.py  test_OutdoorSensorRepositoryTest.py  test_PIMetricsRepositoryTest.py  test_SDRMetricsRepositoryTest.py  test_SolarReadingRepositoryTest.py  test_TemperatureReadingRepositoryTest.py
tests/svc/: test_AQISvcMockTest.py  test_AQISvcTest.py  test_BackupSvcTest.py  test_CameraSvcTest.py  test_PIMetricsSvcTest.py  test_SchedulerSvcTest.py  test_SensorSvcMockTest.py  test_SensorSvcTest.py  test_TimelapseSvcTest.py  test_WuSvcTest.py
tests/util/: test_ConverterTest.py  test_EmailerTest.py
tests/wu/: test_WUClientTest.py
weatherwatch/: SampleLoader.py  dashboard.py  sensor.py  timelapse.py
weatherwatch/backup/: BackupRange.py
weatherwatch/camera/: Camera.py  CameraControls.py  Timelapse.py
weatherwatch/conf/: AQIConfig.py  AppConfig.py  BackupConfig.py  CameraConfig.py  DashConfig.py  DatabaseConfig.py  EmailConfig.py  FileBackupConfig.py  GPSConfig.py  LightConfig.py  MqttConfig.py  SchedulerConfig.py  SensorConfig.py  TimelapseConfig.py  WUConfig.py
weatherwatch/dashboard/: AQISensorPage.py  App.py  BasePage.py  CameraPage.py  IndoorSensorPage.py  OutdoorSensorPage.py  SystemPage.py
weatherwatch/entity/: AQISensor.py  BackupMetrics.py  BaseEntity.py  BaseSensor.py  IndoorSensor.py  LightSensor.py  OutdoorSensor.py  PIMetrics.py  SDRMetricts.py  SolarReading.py  TemperatureReading.py  types.py
weatherwatch/gps/: DMSCoordinate.py  GPSData.py  GPSReader.py
weatherwatch/mqtt/: MqttListener.py
weatherwatch/repository/: AQISensorRepository.py  BackupMetricsRespository.py  BaseRepository.py  DataStore.py  IndoorSensorRepository.py  LightSensorRepository.py  OutdoorSensorRepository.py  PIMetricsRepository.py  SDRMetricsRepository.py  SolarReadingRepository.py  TemperatureReadingRepository.py
weatherwatch/svc/: AQISvc.py  BackupSvc.py  CameraSvc.py  PIMetricsSvc.py  SchedulerSvc.py  SensorSvc.py  TimelapseSvc.py  WUSvc.py
weatherwatch/util/: Converter.py  Emailer.py  Logger.py  Rsync.py  UsbReset.py
weatherwatch/wu/: WUClient.py  WUData.py
(+69 files in other folders)
