# https://python-poetry.org/docs/configuration/
[tool.poetry]
name = "weatherwatch"
version = "0.1.0"
description = "PI based weather station"
authors = ["tim cronin <tecronin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
pyaml-env = "^1.2.1"
sqlalchemy = "^2.0.36"
mariadb = "^1.1.11"
apscheduler = "^3.11.0"
python-event-bus = "^1.2.0"
py-singleton = "^1.0.0"
psutil = "^6.1.0"
lgpio = "^0.2.2.0"
rpi-gpio = "^0.7.1"
adafruit-circuitpython-bmp3xx = "^1.3.20"
adafruit-circuitpython-gps = "^3.11.0"
adafruit-python-shell = "^1.8.1"
adafruit-blinka = "^8.50.0"
dash = {extras = ["testing"], version = "^2.18.2"}
dash-bootstrap-components = "^1.6.0"
dash-daq = "^0.5.0"
watchdog = "^6.0.0"
furl = "^2.1.3"
hurry-filesize = "^0.9"
uptime = "^3.0.1"
numpy = "^1.26.4"
dash-player = "^1.1.0"
opencv-python = "^4.10.0.84"
piexif = "^1.1.3"
requests = "^2.32.3"
axiompy = "^0.2.1"
waitress = "^3.0.2"
backoff = "^2.2.1"
pylint = "^3.3.2"

[tool.poetry.group.test.dependencies]  
coverage = "^7.6.9" 
pytest = "^8.3.4"
pytest-html = "^4.1.1"
pytest-mock = "^3.14.0"
pytemp = "^0.0.1"
python-util = "^1.2.1"
    
[tool.poetry.group.dev.dependencies]  
setuptools = "^75.6.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
pyway = "^0.3.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonrypoetry config --list.api"

[tool.pytest.ini_options]
# https://betterstack.com/community/questions/how-to-solve-the-modulenotfounderror-with-pytest/ 
pythonpath = "weatherwatch"
addopts = [
    "--import-mode=importlib",
    "--html=reports/test.html"
]

# https://coverage.readthedocs.io/en/7.6.3/
[tool.coverage.run]
source = ["weatherwatch"]
omit = ["/usr/**", 
"weatherwatch/sensor.py",
"weatherwatch/dashboard.py", 
"weatherwatch/timelapse.py", 
"weatherwatch/SampleLoader.py", 
"weatherwatch/dashboard/*"
]

[tool.coverage.html]
directory = "reports/coverage"

[tool.black]
line-length = 128
target-version = ["py312"]
#include = "\.pyi?$"
#"extend-exclude" excludes files or directories in addition to the defaults
#extend-exclude = """
## A regex preceded with ^/ will apply only to files and directories
## in the root of the project.
#(
#  ^/foo.py    # exclude a file named foo.py in the root of the project
#  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
#)
#"""

# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
py_version = 312
profile = "black"
line_length = 128
remove_redundant_aliases = true
# TODO
#formatter = "black"
skip = [".gitignore", ".dockerignore"]

[tool.flake8]
max-line-length = 128
max-complexity = 18